--- a/templates/vinculacion/alumnos.html
+++ b/templates/vinculacion/alumnos.html
@@ -10,6 +10,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 {% endblock %}
 
 {% block content %}
@@ -52,7 +53,7 @@
         <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#exampleModal">Agregar Alumno</button>
     </div>
     <div class="table-container">
-        <table class="alumnos-table">
+        <table class="alumnos-table-list">
             <thead>
                 <tr>
                     <th>Matrícula</th>
@@ -101,7 +102,7 @@
     <div class="contenido">
         <h4 id="nombreAlumno">{{ alumno.Nombre }} {{ alumno.Apellido_Pat }}</h4>
         <div class="progress">
-            {% set progreso_total = alumno.progreso %}
+            {% set progreso_total = alumno.progreso if alumno.progreso else 0 %}
             {% set progreso_clase = 'bg-primary' if progreso_total < 100 else 'bg-success' %}
             <div class="progress-bar {{ progreso_clase }}" role="progressbar" 
                 aria-valuenow="{{ progreso_total }}" 
@@ -111,13 +112,33 @@
                 {{ progreso_total | round(0) }}%
             </div>
         </div>
-        <p>
-            {% if alumno.ultima_actividad %}
-                {{ alumno.ultima_actividad }}
-            {% else %}
-                No hay actividades completadas
-            {% endif %}
-        </p>
+            <div class="table-container">
+                <table class="alumnos-table">
+                    <thead style="background-color: var(--primary-color);">
+                        <tr>
+                            <th>Actividad</th>
+                            <th>Estatus</th>
+                            <th>Accion</th>
+                        </tr>
+                    </thead>
+                    <tbody id="table-body">
+                        {% for actividad in alumno.actividades %}
+                        <tr>
+                            {% if actividad.estatus == 'completado' %}
+                            <td>{{ actividad.nombre }}</td>
+                            <td>{{ actividad.estatus }}<i style="color: green;" class="bi bi-check2-circle"></i></td>
+                            <td></td>
+                            {% else %}
+                            <td>{{ actividad.nombre }}</td>
+                            <td>{{ actividad.estatus }} <i style="color: red;"  class="bi bi-x-circle"></i></td>
+                            <td><button type="button" class="btn" >Completar</button></td>
+                            {% endif %}
+                            
+                        </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
+            </div>  
     </div>
 </div>
 {% endfor %}
@@ -260,29 +281,17 @@ document.addEventListener("DOMContentLoaded", function() {
 
 <script>
     // Manejo del doble clic en las celdas de la tabla
-    document.querySelectorAll('.alumnos-container .alumnos-table td').forEach(function(td) {
+    document.querySelectorAll('.alumnos-container .alumnos-table-list td').forEach(function(td) {
         td.addEventListener('dblclick', function() {
             // Obtener el ID del alumno desde el atributo data-id de la fila
             var fila = this.closest('tr');
             var idAlumno = fila.getAttribute('data-id');
-            var progreso = fila.getAttribute('data-progreso'); // Obtener el progreso real del atributo data-progreso
-            var ultimaActividad = fila.getAttribute('data-ultima-actividad'); // Obtener la última actividad del atributo data-ultima-actividad
+
 
             // Mostrar la barra lateral correspondiente al alumno
             var barraLateral = document.getElementById('Progreso' + idAlumno);
             if (barraLateral) {
-                var barraProgreso = barraLateral.querySelector('.progress-bar');
-                barraProgreso.style.width = progreso + '%';
-                barraProgreso.textContent = progreso + '%';
 
-                // Actualizar el ancho de la barra de progreso
-                var barraProgreso = barraLateral.querySelector('.progress-bar');
-                barraProgreso.style.width = progreso + '%';
-                barraProgreso.textContent = progreso + '%';
-
-                // Actualizar el estado de la actividad
-                var estadoActividad = barraLateral.querySelector('p');
-                estadoActividad.textContent = ultimaActividad || "No hay actividades completadas";
 
                 // Mostrar la barra lateral
                 barraLateral.classList.add('show');
