--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,7 @@
     <!-- Boxicons CDN Link -->
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/sidebar.css') }}">
+    <link rel="icon" type="image/png" href="{{ url_for('static', filename='img/LOGO-UTA.png') }}">
     <title>{% block title %}Página Principal{% endblock %}</title>
     {% block styles %}{% endblock %}
 </head>
