update sidebar html javier

--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
     {% block styles %}{% endblock %}
 </head>
 <body>
-    <div class="sidebar" >
+    <div class="sidebar active" >
         <div class="logo_content">
             <div class="logo">
                 <img src="{{ url_for('static', filename='img/LOGO-UTA.png') }}" alt="">
